--- a/rust-wasm/Cargo.toml
+++ b/rust-wasm/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["cdylib", "rlib"]
 [features]
 default = ["console_error_panic_hook"]
 
+
 [dependencies]
 wasm-bindgen = "0.2.63"
 js-sys = "0.3.61"
@@ -24,6 +25,11 @@ console_error_panic_hook = { version = "0.1.6", optional = true }
 # compared to the default allocator's ~10K. It is slower than the default
 # allocator, however.
 wee_alloc = { version = "0.4.5", optional = true }
+[dependencies.web-sys]
+version = "0.3.61"
+features = [
+  "console",
+]
 
 [dev-dependencies]
 wasm-bindgen-test = "0.3.13"
